[gd_scene load_steps=4 format=3 uid="uid://dqrej62iodq0c"]

[ext_resource type="Script" path="res://scenes/screens/pause_screen.gd" id="1_f31en"]
[ext_resource type="Texture2D" uid="uid://cssqtucyq5pki" path="res://sprites/ui/continueButton.png" id="2_01srw"]
[ext_resource type="Texture2D" uid="uid://bkymsvlph2vu5" path="res://sprites/ui/restart.png" id="3_m15gw"]

[node name="PauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f31en")

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -353.0
offset_top = -195.0
offset_right = 353.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.28, 0.28, 0.28, 0.764706)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.5
offset_top = -142.0
offset_right = 316.5
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
bbcode_enabled = true
text = "[center]PAUSED[/center]"
fit_content = true

[node name="ContinueButton" type="TextureButton" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_01srw")
texture_pressed = ExtResource("2_01srw")
texture_hover = ExtResource("2_01srw")
texture_disabled = ExtResource("2_01srw")
texture_focused = ExtResource("2_01srw")

[node name="QuitButton" type="TextureButton" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_m15gw")
texture_pressed = ExtResource("3_m15gw")
texture_hover = ExtResource("3_m15gw")
texture_disabled = ExtResource("3_m15gw")

[connection signal="button_down" from="ColorRect/VBoxContainer/ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
